# SortVisualizer

./: CMakeLists.txt  README.md
src/: Config.cpp  Config.h  Diagram.cpp  Diagram.h  Dispatcher.cpp  Dispatcher.h  IntWrapper.cpp  IntWrapper.h  README.md  SortVisualizer.cpp  SortVisualizer.h  Sorts.h  main.cpp
